p3/config/wil-app.yaml
apiVersion: v1
kind: Deployment
metadata:
  name: wil-app-deployment
  labels:
    app: wil-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wil-app
  template:
    metadata:
      labels:
        app: wil-app
    spec:
      containers:
        - name: wil-app
          image: wil42/playground:v1
          ports:
            - containerPort: 8888
---
apiVersion: v1
kind: Service
metadata:
  name: wil-app-service
spec:
  type: LoadBalancer
  selector:
    app: wil-app
  ports:
    - port: 8888
      targetPort: 8888
